# better-alternatives

./: .gitignore  CMakeLists.txt  README  README.md
includes/: binary_tree.h  class.h  config.h  iterator.h  list.h  map.h  oolist.h
src/: CMakeLists.txt  binary_tree.c  class.c  config.c  fs.c  map.c  oolist.c
